--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
+  "name": "g-avtar-sdk",
+  "version": "0.0.2",
+  "repository": "git@github.com:chann44/g-avtar-sdk.git",
+  "author": "chann44",
+  "description": "sdk for getting for avtars from github hosted avtars ",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@types/node": "^18.7.18",
+    "g-avtar-sdk": "^0.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
