--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "g-avtar-sdk",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": "git@github.com:chann44/g-avtar-sdk.git",
   "author": "chann44",
   "description": "sdk for getting for avtars from github hosted avtars ",
@@ -8,14 +8,15 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "ts-node src/test.ts"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
     "@types/node": "^18.7.18",
-    "g-avtar-sdk": "^0.0.1",
+    "g-avtar-sdk": "^0.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
